--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,9 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+
+
+# secret keys and passwords
+Part6_CRUD/fbconfig.json
+Part6_CRUD/firebaseSDKadminkey.json
